[metadata]
name = SampleAbstractFactory
author = Robert Ulmer
author_email = rulmer@lr.htlweiz.at
description = "Abstract factory example"
version = 1.0.0
url = https://github.com/hifigraz/AbstractFactory
keywords = logging
        pytest
        file
        parser
        output
        input
	restful
	rest
	fastapi


license_files =
        LICENSE.txt

[options.entry_points]
console_scripts = 
        rul_test = rul.main:main

[options]
python_requires >= 3.8
package_dir =
        =src
packages = find:
zip_safe = False
install_requires =
        sqlalchemy
        peewee

[options.extras_require]
dev = 
  black
  pytest
  rope
  flake8
  flake8-eradicate
  flake8-isort
  flake8-spellcheck
  flake8-variables-names
  flake8-builtins
  ipython

[flake8]
max-line-length=88
exclude = venv
docstring-convention = numpy
dictionaries = en_US,python,technical

[isort]
profile = black

[tool:pytest]
testpaths = tests
log_level = info

